Tue Jul  1 09:41:12 EDT 2003	Mark Lilback <mark@lilback.com>
	* src/ctlib/ct.c added null check to tdsdump_log call in ct_connect

Tue Jul  1 01:28:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsiconv.h 
	* src/tds/encodings.h src/tds/encodings.pl src/tds/iconv.c
	- Add ASCII conversions
	* src/replacements/iconv.c Fix blatant errors

Mon Jun 30 00:53:14 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h include/tdsiconv.h include/sybdb.h
	* src/dblib/dbutil.c src/dblib/error_table.h
	* src/replacements/Makefile.am
	* src/tds/iconv.c src/tds/token.c
	- reenable compilation without iconv.
	* src/replacements/iconv.c
	- Trivial ASCII<->USC2 iconv.
	* doc/userguide.sgml added comments
	
Wed Jun 25 17:05:02 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml
	- Added paragraph from ML regarding effect of TDS version.

Tue Jun 24 16:58:35 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h include/sybdb.h
	* src/dblib/dblib.c src/dblib/unittests/t0001.c
	* src/tds/login.c src/tds/mem.c
	- Initialize option_flag2 in TDS7+ login packet from a field
	- in TDSSOCKET.  Turn off ODBC bit in dblib.c::tdsdbopen().

Thu Jun 12 16:00:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c: applyed patch #753288

Wed Jun 11 22:09:02 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/tds.h src/apps/tsql.c:
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/odbc/odbc.c src/tds/token.c src/tds/example/token1.c:
	* src/tds/unittests/common.c src/tds/unittests/convert.c:
	* src/tds/unittests/dataread.c src/tds/unittests/dynamic1.c:
	* src/tds/unittests/flags.c src/tds/unittests/t0002.c:
	* src/tds/unittests/t0004.c src/tds/unittests/t0005.c:
	* src/tds/unittests/t0006.c:
	- start merging some Bill Thompson work. This change merge some
	  TDS_DONE handling (mainly tds_process_result_tokens accept
	  an additional parameter, done_flags to return DONE flags)
